# ecom-frontend

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: config.ts  globals.css  layout.tsx  page.tsx
app/(auth)/components/: SignInView.tsx  SignUpView.tsx
app/Components/: Appbar.tsx  SolanaPayQR.tsx  WalletConnect.tsx  WalletProvider.tsx
app/Components/HomePage/: CryptoImgeSlider.tsx  Main.tsx  MainPage.tsx  Products.tsx  ProductsAppBar.tsx
app/cart/: page.tsx
app/checkout/: page.tsx
app/createproduct/: page.tsx
app/fonts/Paradisk/: DEMO - PERSONAL USE ONLY - NihStudio.txt
app/fonts/Ventus/: More Info.txt
app/lib/auth/: login.ts  signup.ts
app/login/: page.tsx
app/login/delivery-agent/: page.tsx
app/login/seller/: page.tsx
app/order/[OrderId]/: page.tsx
app/order/[OrderPubkey]/: page.tsx
app/product/[...]/: page.tsx
app/products/: page.tsx
app/signin/: page.tsx
app/signup/: page.tsx
app/signup/delivery-agent/: page.tsx
app/signup/seller/: page.tsx
app/store/: sellerPubkeyStore.ts  useWithdrawStore.ts  vaultStore.ts
app/utils/: getSolPrice.ts
app/utils/contexts/: CartLenContext.tsx  selectContext.tsx  (+2 more)
auth-api/: Cargo.toml
auth-api/api/: Cargo.toml
auth-api/api/src/: auth.rs  lib.rs  signin.rs
auth-api/api/src/routes/: mod.rs  signin.rs  signup.rs
auth-api/src/: main.rs
auth-api/store/: Cargo.toml
auth-api/store/migrations/: 20251111091636_create_users.up.sql
auth-api/store/src/: config.rs  lib.rs  store.rs
auth-api/store/src/models/: user.rs
primary-backend/: package.json
(+3 files in other folders)
