[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
futures-util = "0.3.31"
log = "0.4.28"
tokio = {version = "1.48.0", features = ["full"]}
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.20"
store = { path = "./store" }
api = { path = "./api" }



[workspace]
members = [
    "api",
    "store",
]
