[package]
name = "store"
version = "0.0.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
serde_json = "1.0.145"
serde = "1.0.228"
